# bulk-uploader

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: lint.yaml  tests.yaml
bulk_uploader/: __init__.py  apicall.py  async_queue.py  auth.py  interfaces.py  iterators.py  manager.py  store.py
src/: apicall.py  iterators.py  manager.py  store.py
src/bulk_uploader/: interfaces.py  iterators.py  manager.py  test.py
tests/: fake_clients.py  test_data_saving.py  test_params_iterators.py  test_rate_limiter.py  test_url_producers.py
